--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
+    "@livekit/components-react": "^1.2.2",
+    "@livekit/components-styles": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@t3-oss/env-nextjs": "^0.6.1",
@@ -21,8 +23,11 @@
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "livekit-client": "^1.13.3",
+    "livekit-server-sdk": "^1.2.6",
     "lucide-react": "^0.279.0",
     "next": "13.5.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,7 +38,6 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "prisma": "^3.15.2",
-    "zod-prisma": "^0.5.4"
+    "prisma": "^3.15.2"
   }
 }
